@startuml
title View Statistics Dashboard Class Diagram (/api/progress/summary)
skinparam classAttributeIconSize 0
skinparam linetype ortho
hide circle
hide class circle
hide empty methods
hide empty fields
note top
Generated from mobile-view-statistics-dashboard-sequence.puml.
Classes and members are populated from current repository source when a matching code type exists.
end note

class ProgressOverviewNotifier <<frontend_controller>> {
  "+ build() : ProgressOverviewState"
  "+ load()"
}

class ProgressSummaryResponse <<dto>> {
  "+ CurrentStreakDays : int"
  "+ LongestStreakDays : int"
  "+ Accuracy7Days : float"
  "+ Correct7Days : int"
  "+ TotalAnswers7Days : int"
  "+ TotalWordsInProgress : int"
  "+ MasteredWords : int"
  "+ SessionsThisMonth : int"
}

class ProgressController <<backend_controller>> {
  "- _progressSummaryService : IProgressSummaryService"
  "- _progressAnalyticsService : IProgressAnalyticsService"
  --
  "+ GetSummary(cancellationToken: CancellationToken) : TaskOfIActionResult"
}

class IProgressSummaryService <<service_interface>> {
  "+ GetSummaryAsync(userId: uint, cancellationToken: CancellationToken) : TaskOfProgressResultOfProgressSummary"
}

class ProgressSummaryService <<service>> {
  "- _progressSummaryRepository : IProgressSummaryRepository"
  "- _progressSummaryCache : IProgressSummaryCacheNullable"
  --
  "+ GetSummaryAsync(userId: uint, cancellationToken: CancellationToken) : TaskOfProgressResultOfProgressSummary"
}

class TestSession <<entity>> {
  "+ SessionId : uint"
  "+ UserId : uint"
  "+ TestType : string"
  "+ Mode : string"
  "+ QuestionType : int"
  "+ ScopeType : string"
  "+ ScopeDateFrom : DateOnlyNullable"
  "+ ScopeDateTo : DateOnlyNullable"
  "+ WordOrder : string"
  "+ WordLimit : intNullable"
  "+ TimeLimitSec : intNullable"
  "+ Lives : intNullable"
}

class TestAnswer <<entity>> {
  "+ AnswerId : uint"
  "+ SessionId : uint"
  "+ WordId : uint"
  "+ SenseId : uintNullable"
  "+ QuestionNumber : int"
  "+ QuestionType : int"
  "+ DisplayContent : string"
  "+ ExpectedAnswer : string"
  "+ AcceptedAnswers : stringNullable"
  "+ UserAnswer : stringNullable"
  "+ IsCorrect : boolNullable"
  "+ AiScore : floatNullable"
}

class UserWordProgress <<entity>> {
  "+ ProgressId : uint"
  "+ UserId : uint"
  "+ WordId : uint"
  "+ TestCount : int"
  "+ CorrectCount : int"
  "+ WrongCount : int"
  "+ ConsecutiveCorrect : int"
  "+ IsInWrongList : bool"
  "+ MasteryLevel : int"
  "+ SrsInterval : int"
  "+ EaseFactor : float"
  "+ LastTestedAt : DateTimeNullable"
}

class IProgressSummaryRepository <<repository_interface>> {
  "+ GetSummaryStatisticsAsync(userId: uint, query: ProgressSummaryQuery, cancellationToken: CancellationToken) : TaskOfProgressSummaryStatistics"
}

class ProgressSummaryRepository <<repository>> {
  "- _dbContext : VocaNovaDbContext"
  --
  "+ GetSummaryStatisticsAsync(userId: uint, query: ProgressSummaryQuery, cancellationToken: CancellationToken) : TaskOfProgressSummaryStatistics"
}

class VocaNovaDbContext <<dbcontext>> {
  "+ AgeRanges : DbSetOfAgeRange"
  "+ AiGradingCaches : DbSetOfAiGradingCache"
  "+ AuditLogs : DbSetOfAuditLog"
  "+ EducationLevels : DbSetOfEducationLevel"
  "+ LearningPurposes : DbSetOfLearningPurpose"
  "+ Occupations : DbSetOfOccupation"
  "+ OtpVerifications : DbSetOfOtpVerification"
  "+ RefreshTokens : DbSetOfRefreshToken"
  "+ Regions : DbSetOfRegion"
  "+ Roles : DbSetOfRole"
  "+ TestAnswers : DbSetOfTestAnswer"
  "+ TestSessions : DbSetOfTestSession"
  --
  "+ SaveChangesAsync(cancellationToken: CancellationToken) : TaskOfInt"
}

class MySQL_Database <<database>> {

}
ProgressOverviewNotifier ..> ProgressController : getSummary()
ProgressSummaryRepository ..> VocaNovaDbContext
VocaNovaDbContext ..> MySQL_Database
ProgressController ..> ProgressSummaryResponse
IProgressSummaryService <|.. ProgressSummaryService
ProgressController ..> IProgressSummaryService : GetSummaryAsync()
IProgressSummaryRepository <|.. ProgressSummaryRepository
ProgressSummaryService ..> IProgressSummaryRepository : GetSummaryStatisticsAsync()
ProgressSummaryRepository ..> TestSession
ProgressSummaryRepository ..> TestAnswer
ProgressSummaryRepository ..> UserWordProgress
@enduml
